--- a/.hassio-addons.yml
+++ b/.hassio-addons.yml
@@ -2,6 +2,6 @@
 channel: stable
 addons:
   autossh:
-    repository: hassio-addons/autossh/autossh
+    repository: xchwarze/addon-autossh
     target: autossh
     image: autossh
