--- a/autossh/config.yaml
+++ b/autossh/config.yaml
@@ -1,17 +1,19 @@
 ---
 name: Autossh
-version: 1.3.0
+version: 1.4.0
 slug: autossh
 description: Automatically connect to a ssh server for forwarding ports
 url: https://github.com/xchwarze/addon-autossh
 arch:
-  - armv7
-  - armhf
-  - amd64
   - aarch64
-  - i386
+  - amd64
+  - armv7
 advanced: true
 host_network: true
+startup: services
+boot: auto
+init: false
+image: null
 map:
   - share:rw
 options:
@@ -19,10 +21,9 @@ options:
   ssh_port: 22
   username: autossh
   remote_forwarding:
-    - 127.0.0.1:8123:172.17.0.1:8123
-  local_forwarding:
-    - ""
-  other_ssh_options: "-v"
+    - 127.0.0.1:8123:127.0.0.1:8123
+  local_forwarding: []
+  other_ssh_options: ""
   monitor_port: 0
   server_alive_interval: 30
   server_alive_count_max: 3
@@ -41,10 +42,10 @@ schema:
     - str
   other_ssh_options: str
   monitor_port: int(0,65535)
-  server_alive_interval: int
-  server_alive_count_max: int
-  gatetime: int
-  retry_interval: int
+  server_alive_interval: int(0,3600)
+  server_alive_count_max: int(1,100)
+  gatetime: int(0,600)
+  retry_interval: int(1,600)
   ssh_key_name: str
   use_share_folder: bool
   log_level: list(trace|debug|info|notice|warning|error|fatal)
